crates/python_parser/tests/snapshots/invalid_syntax@expressions__unary.py.snap
---
source: crates/python_parser/tests/fixtures.rs
input_file: crates/python_parser/resources/invalid/expressions/unary.py
---
## AST

```
Module(
    ModModule {
        range: 0..10,
        body: [
            Expr(
                ExprStmt {
                    range: 0..5,
                    value: UnaryOp(
                        UnaryOpExpr {
                            range: 0..5,
                            op: Not,
                            operand: Name(
                                NameExpr {
                                    range: 4..5,
                                    id: Name("x"),
                                    ctx: Load,
                                },
                            ),
                        },
                    ),
                },
            ),
            Expr(
                ExprStmt {
                    range: 9..10,
                    value: NumberLiteral(
                        NumberLiteralExpr {
                            range: 9..10,
                            value: Int(
                                1,
                            ),
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | not x := 1
  |       ^^ Syntax Error: Expected a statement
  |
